test/soya/error/type/if.soy
function void main() {
  if (1) {
    putchar(50);
  } else {
    putchar(50);
  }
}
